--- a/omokGame/src/main/webapp/resources/css/hisotory1.css
+++ b/omokGame/src/main/webapp/resources/css/hisotory1.css
@@ -5,7 +5,7 @@
 
 .whole {
   position: relative;
-  width: 1920px;
+  width: 100%;
   height: 1080px;
   background-color: #444341;
   /* box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25); */
