--- a/omokGame/src/main/webapp/view/game/boardview/omok.css
+++ b/omokGame/src/main/webapp/view/game/boardview/omok.css
@@ -176,6 +176,43 @@ padding-top: 46px;
 
 }
 
+#warning {
+   
+    position: absolute;
+    display: none;
+    /* font-size: 100px; */
+    top: -200px;
+    z-index: 99999;
+    margin : auto;
+    text-shadow: 3px 2px 2px rgb(249, 242, 229); 
+    animation: fadein 1.5s;
+    width : 800px;
+    height: 200px;
+}
+
+#warning > div{
+    position: absolute;
+   text-align:center;
+   font-family: 'Inter';
+   font-style: normal;
+   font-weight: 900;
+   font-size: 128px;
+   line-height: 60px;
+    top: 10px;
+   width:60px;
+   height:100px;
+    left: 360px;
+   color: rgba(0, 0, 0, 0.7);
+   animation: fadein 1s;
+   animation-iteration-count: infinite ;
+}
+#warning > img{
+    position: absolute;
+    left: 30px;
+    bottom: 10px;
+    opacity : 0.7;
+}
+
 .paper {
     position: absolute;
     z-index: 0;
