--- a/omokGame/src/main/webapp/css/main.css
+++ b/omokGame/src/main/webapp/css/main.css
@@ -290,3 +290,39 @@
 
   color: #ffffff;
 }
+
+.modal {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  top: 0;
+  left: 0;
+  display: none;
+}
+
+.modal_content {
+  width: 500px;
+  height: 500px;
+  background: #fff;
+  border-radius: 10px;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  margin-top: -400px;
+  margin-left: -190px;
+  text-align: center;
+  box-sizing: border-box;
+  padding: 74px 0;
+  line-height: 23px;
+  cursor: pointer;
+	
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 50px;
+  background-color: #100f0f;
+  color: #ffffff;
+  
+}
