--- a/omokGame/src/main/webapp/css/main.css
+++ b/omokGame/src/main/webapp/css/main.css
@@ -305,15 +305,15 @@
 }
 
 .modal_content {
-  width: 600px;
-  height: 600px;
+  width: 700px;
+  height: 700px;
   background: #fff;
   border-radius: 10px;
   position: relative;
   top: 50%;
   left: 50%;
   margin-top: -400px;
-  margin-left: -250px;
+  margin-left: -350px;
   text-align: center;
   box-sizing: border-box;
   padding: 74px 0;
@@ -334,7 +334,7 @@
   outline: none;
   font-size: 30px;
   margin: 30px;
-  background: black;
+  background-color: #100f0f;
   color: white;
   padding: 10px;
   cursor: pointer;
