fix:전적 페이지 idx 수정

--- a/omokGame/src/main/webapp/css/history.css
+++ b/omokGame/src/main/webapp/css/history.css
@@ -38,8 +38,9 @@
     line-height: 77px;
     justify-content: space-between;
     flex-direction: column;
+    height:630px;
     display: flex;
-    justify-content: space-evenly;
+
     
 }
 
