--- a/omokGame/src/main/webapp/css/signUp.css
+++ b/omokGame/src/main/webapp/css/signUp.css
@@ -12,33 +12,31 @@ body{
 
 .wrapper{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    width: 1200px;
+    width: 1920px;
+    height: 1080px;
 }   
 
 .signUp{
     display: flex;
     align-items: center;
     flex-direction: column;
-    justify-content: space-around;
-
+    justify-content: space-evenly;
     box-sizing: border-box;
     border: 8px solid #1499F8;
-    width: 780px;
-    height: 600px;
+    width: 1141px;
+    height: 918px;
     border-radius: 50px;
     background: #1D1D1D;
 }
 
 .infoForm{
     display: flex;
-    justify-content: center;
     align-items: center;
     justify-content: space-around;
-
-    width: 700px;
-    height: 450px;
+    width: 1080px;
+    height: 600px;
 }
 
 .agreeForm{
@@ -48,43 +46,40 @@ body{
     align-items: center;
     flex-direction: column;
     justify-content: space-evenly;
-
-    width: 300px;
-    height: 400px;
+    width: 483px;
+    height: 560px;
 }
 .agreeForm > .agreeHeader {
-    width: 280px;
-
+    width: 442px;
     font-family: 'Inter';
     font-style: normal;
-    font-weight: 600;
-    font-size: 22px;
+    font-weight: 700;
+    font-size: 34px;
     line-height: 20px;
     color: #FFFFFF;
+    height: 48px;
+    text-align: center;
 }
 .agreeForm > .agreeBody{
-    width: 280px;
-    height: 150px;
-
+    width: 446px;
+    height: 263px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 600;
-    font-size: 15px;
-    line-height: 20px;
+    font-size: 24px;
+    line-height: 70px;
     color: #FFFFFF;
 }
 .agreeForm > .agreeFooter{
     text-align: center;
-    
-    width: 150px;
-    height: 40px;
+    width: 285px;
+    height: 54px;
     background: #202020;
-
     font-family: 'Inter';
     font-style: normal;
     font-weight: 600;
-    font-size: 20px;
-    line-height: 40px;
+    font-size: 28px;
+    line-height: 50px;
     color: #FFFFFF;
 }
 
@@ -92,22 +87,21 @@ body{
 /* 동의 칸은 끝 */
 
 .inputWrapper{
-    width: 300px;
-    height: 400px;
+    width: 403px;
+    height: 560px;
 }
 
 .inputWrapper > .textForm {
     display: flex;
     justify-content: space-between;
-    width: 300px;
-    height: 400px;
+    width: 429px;
+    height: 560px;
     flex-direction: column;
 }
 
 .inputWrapper > .textForm > div {
-    /* display: flex; */
-    width: 260px;
-    /* height: 40px; */
+
+    width: 400px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 500;
@@ -118,43 +112,45 @@ body{
 .inputWrapper > .textForm > .inputForm {
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: center;
+    align-content: center;
 }
 
 .inputText > input {
-    width: 180px;
-    height: 30px;
+    width: 300px;
+    height: 50px;
     background: #8A8A8A;
     color: #ffffff;
+    font-size: 25px;
 }
 
 font{
    height:34px;
+   font-size: 25px;
 }
 
 .btn > input {
-
-    background: #444341;
-    border: 3px solid #59C0E7;
-    border-radius: 5px;
-
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    color: #FFFFFF;
+background: #444341;
+border: 3px solid #59C0E7;
+border-radius: 5px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 20px;
+color: #FFFFFF;
+height: 50px;
 }
 
+
 .signUpBtn{
-    width: 230px;
-    height: 50px;
+    width: 267px;
+    height: 76px;
     background: #59C0E7;
     border-radius: 120px;
-
     font-family: 'Inter';
     font-style: normal;
     font-weight: 600;
-    font-size: 25px;
+    font-size: 30px;
     line-height: 20px;
     color: #FFFFFF;
 }
