--- a/omokGame/src/main/webapp/view/game/boardview/omok3.css
+++ b/omokGame/src/main/webapp/view/game/boardview/omok3.css
@@ -29,6 +29,43 @@ background-size: 120% 100%;
     padding-top: 10%;
     margin-left: 15%;
 }
+#warning {
+   
+    position: absolute;
+    display: none;
+    /* font-size: 100px; */
+    top: -200px;
+    z-index: 99999;
+    margin : auto;
+    text-shadow: 3px 2px 2px rgb(249, 242, 229); 
+    animation: fadein 1.5s;
+    width : 800px;
+    height: 200px;
+}
+
+#warning > div{
+    position: absolute;
+   text-align:center;
+   font-family: 'Inter';
+   font-style: normal;
+   font-weight: 900;
+   font-size: 128px;
+   line-height: 60px;
+    top: 10px;
+   width:60px;
+   height:100px;
+    left: 360px;
+   color: rgba(0, 0, 0, 0.7);
+   animation: fadein 1s;
+   animation-iteration-count: infinite ;
+}
+#warning > img{
+    position: absolute;
+    left: 30px;
+    bottom: 10px;
+    opacity : 0.7;
+}
+
 .wrap {
   
 box-sizing: border-box;
@@ -230,10 +267,11 @@ padding-top: 46px;
     margin: 4%;
     width: 82%;
     display: flex;
-    padding: 3%;
+    /* padding: 3%; */
     font-size: 2rem;
     height: 8%;
     align-items: center;
+    margin-left: 7%;
 }
 
 .timer > *{
@@ -351,4 +389,25 @@ padding-top: 46px;
 	left: 34%;
 	top: 0;
 	z-index: 3;
+}
+
+#blacktimer {
+	height : 100%;
+	flex: 1;
+	background-color: white;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	color:black;
+	font-size: 3rem;
+}
+#whitetimer {
+	height : 100%;
+	display: flex;
+	color:white;
+	flex: 1;
+	background-color: black;
+	justify-content: center;
+	align-items: center;
+	font-size: 3rem;
 }
