--- a/omokGame/src/main/webapp/css/history.css
+++ b/omokGame/src/main/webapp/css/history.css
@@ -1,6 +1,4 @@
 @charset "UTF-8";
-@charset "UTF-8";
-
 .wrap{
     background-color: #444341;
     display: flex;
@@ -61,6 +59,40 @@
     opacity: 1;
 }
 
+
+.selector{
+	display: flex;
+	justify-content: center;
+	margin-bottom: 30px;
+}
+
+
+.seltext{
+	font-family: 'Inter';
+	font-style: normal;
+	font-weight: 800;
+	font-size: 29px;
+	line-height: 34px;
+	width : 180px;
+}
+
+.seltext > a{
+	text-decoration:none;
+	color: #FFFFFF;
+	
+}
+.v-line{
+	border-left: 3px solid #FFFFFF;
+}
+
+
+.seltext.check > a{
+	color: #59C0E7;
+}
+
+
+
+
 img {
     width: 60px;
     height: 60px;
@@ -78,7 +110,7 @@ img {
     color: blue;
     text-align: center;
     align-items: flex-start;
-    margin-top: 145px;
+    margin-top: 105px;
     position:relative;
 }
 
@@ -116,5 +148,4 @@ img {
     left: 40%;
     margin-bottom: 50px;
 }
-
 
