--- a/omokGame/src/main/webapp/css/mode.css
+++ b/omokGame/src/main/webapp/css/mode.css
@@ -17,13 +17,13 @@
 	background-color: #8a8a8a;
 }
 .title {
-	width: 310px;
+	width: 230px;
 	height: 120px;
 	border-bottom: 10px solid white;
 	box-shadow: 0px 3px 0px rgba(0, 0, 0, 0.20);
-	margin-top: 78px;
-	margin-left: 67px;
-	margin-bottom: 20px;
+	margin-top: 68px;
+	margin-left: 98px;
+	margin-bottom: 12px;
 }
 
 .title>p {
@@ -34,7 +34,7 @@
 	line-height: 116px;
 	text-align: center;
 	color: white;
-	-webkit-text-stroke: 1.5px black;
+	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .visual {
